Comprehensive Full-Stack Upgrade: Vite Migration, Premium UI/UX, Admin Dashboard, and Real-time Bookings